--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
     "build": "tsc",
     "start": "node dist/server.js",
     "dev": "nodemon",
+    "dev:safe": "concurrently -k -n \"TYPECHECK,SERVER\" -c \"cyan,green\" \"tsc --noEmit --watch\" \"nodemon\"",
     "test": "jest",
     "test:watch": "jest --watch",
     "lint": "eslint",
@@ -47,6 +48,7 @@
     "@types/jest": "^29.5.14",
     "@types/morgan": "^1.9.9",
     "@types/node": "^22.13.16",
+    "concurrently": "^9.1.2",
     "eslint": "^9.23.0",
     "eslint-config-prettier": "^10.1.1",
     "eslint-plugin-import": "^2.31.0",
